<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp"
        android:paddingBottom="18dp">

        <!-- Bottom sheet contents. -->
        <TextView
            android:id="@+id/titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="18dp"
            android:text="@string/addPoint"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pointName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titre"
            android:hint="@string/pointName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pointNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pointType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pointName"
            android:hint="@string/type_de_point"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/pointTypeField"
                android:hint="@string/type_de_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fieldLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pointType"
            android:layout_marginTop="12dp"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/fieldLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fieldLat"
            android:text="@string/longitude" />

        <Button
            android:id="@+id/bottomsheet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fieldLong"
            android:layout_alignEnd="@id/fieldLong"
            android:text="@string/add" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>