<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp"
        android:paddingBottom="18dp">

        <!-- Bottom sheet contents. -->
        <TextView
            android:id="@+id/titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="18dp"
            android:text="@string/addMap"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mapName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titre"
            android:hint="@string/mapName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mapNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bottomsheet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mapName"
            android:layout_alignEnd="@id/mapName"
            android:layout_marginTop="12dp"
            style="?attr/materialButtonStyle"
            android:text="@string/add" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>